--- a/themes/navhub-v2/static/css/sass/navcoin-hero.scss
+++ b/themes/navhub-v2/static/css/sass/navcoin-hero.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 10px;
-
+  margin: 0 auto;
   img {
     width: 178px;
     height: 178px;
